tests/negative/neg_pr113_tuple_field_oob.safe
package neg_pr113_tuple_field_oob
   pair : (boolean, integer) = (true, 1)
   value : integer = pair.3

